update chart to 0.3.0

--- a/sources/dummy-chart/templates/taskdef.yaml
+++ b/sources/dummy-chart/templates/taskdef.yaml
@@ -15,8 +15,8 @@ spec:
   memory: {{ .Values.memory }}
   containerDefinitions: |-
   {{- .Values.containerDefinitions | nindent 4 }}
-  enablePrisma: {{ .Values.enablePrisma }}
-  enableOneAgent: {{ .Values.enableOneAgent }}
+  enablePrismaDefender: {{ .Values.enablePrismaDefender }}
+  enableDynatraceOneAgent: {{ .Values.enableDynatraceOneAgent }}
   {{- with .Values.tags }}
   tags:
   {{- toYaml . | nindent 4 }}
