--- a/sources/dummy-chart/values.yaml
+++ b/sources/dummy-chart/values.yaml
@@ -38,5 +38,5 @@ containerDefinitions: |
       }
     }
   ]
-enablePrisma: true
-enableOneAgent: true
+enablePrismaDefender: true
+enableDynatraceOneAgent: true
